modifiche fatte a lezione
